2004-02-24  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm: Some new functions.

2004-02-22  Wakaba  <wakaba@suika.fam.cx>

	* QName.pm (__check_name): Use NodeTree module instead of obsolete
	XML module.
	(EMPTY_PFX, ZERO_PFX): New constant functions.

	* NodeTree.pm (resolve_relative_uri): Qualify internal method by
	namespace name.

2003-12-31  Wakaba  <wakaba@suika.fam.cx>

	* QName.pm (prefix_to_name): Don't call prefix2name w/ parent node's
	decls node when parent node does not have ns decls node.

	* Node.pm (_get_ns_decls_node): Returns default value if specified so.

2003-12-05  Wakaba  <wakaba@suika.fam.cx>

	* NodeTree.pm (construct_xml_tree): New function.

2003-11-22  Wakaba  <wakaba@suika.fam.cx>

	* QName.pm (generate_prefix): Ignore implicit xmlns="" declaration.

2003-11-09  Wakaba  <wakaba@suika.fam.cx>

	* Node.pm (%NS): Removed.
	(SGML_*, XML_*): New constant functions.

2003-11-08  Wakaba  <wakaba@suika.fam.cx>

	* QName.pm (prefix_to_name): New options of 'use_xml' and 'use_xmlns'.
	(name_to_prefix): Likewise.

	* Parser.pm (_parse_start_tag): Buggy inex fixed.

2003-11-01  Wakaba  <wakaba@suika.fam.cx>

	* QName.pm (NS_xml_URI, NS_xmlns_URI): New constants.
	* NodeTree.pm: New module.
	* Node.pm: New module.

2003-11-01  Wakaba  <wakaba@suika.fam.cx>

	* QName.pm (generate_prefix): Allow one-char namespace prefix.
	(name_to_prefix): 'preserve_prefix_default': New option.

2003-10-31  Wakaba  <wakaba@suika.fam.cx>

	* QName.pm (split_qname): Quotemeta in separator.

	* Validate.pm (_validate_element): Bug fix to get element type declaration (enbugged by change on EntityManager.pm 1.12).

2003-09-30  Wakaba  <wakaba@suika.fam.cx>

	* QName.pm (name_to_prefix): Overwrite DEFAULT_PFX := NULL_URI
	if DEFAULT_PFX != NULL_URI is defined.

	* XPath.pm (_get_ns_decls_node): Renamed from __get_ns_decls_node.
	(qname): New option 'use_context_function_library'.

2003-09-28  Wakaba  <wakaba@suika.fam.cx>

	* QName.pm (generate_prefix): New function.