@@ -1,5 +1,11 @@
 2004-02-24  Wakaba  <wakaba@suika.fam.cx>
 
+	* Parser.pm: Some modification to work with Parser/NodeTree.pm.
+
+2004-02-23  Wakaba  <wakaba@suika.fam.cx>
+
+	* QName.pm (%EXPORT_TAGS): New constant functions added to :prefix.
+
 	* Parser.pm: Some new functions.
 
 2004-02-22  Wakaba  <wakaba@suika.fam.cx>
